force-app/main/default/objects/Opportunity/fields/Affiliate_Program__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Program__c</fullName>
    <label>Affiliate Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marshall Advanced Manufacturing Center</fullName>
            </value>
            <value>
                <fullName>New Jersey Manufacturing Extension Program</fullName>
            </value>
            <value>
                <fullName>North Carolina A&amp;T</fullName>
            </value>
            <value>
                <fullName>St. Cloud State University</fullName>
            </value>
            <value>
                <fullName>Texas A&amp;M</fullName>
            </value>
            <value>
                <fullName>University of Florida</fullName>
            </value>
            <value>
                <fullName>University of St. Thomas</fullName>
            </value>
            <value>
                <fullName>University of Tennessee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>