force-app/main/default/objects/Opportunity/fields/AgreementInvoice__c.field-meta.xml
<CustomField>
    <fullName>AgreementInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice that when paid will indicate the Opportunity Agreement stage is complete.</description>
    <label>AgreementInvoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>fw1__Invoice__c.fw1__Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>