force-app/main/default/objects/Opportunity/fields/Anticipated_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Benefits__c</fullName>
    <label>Anticipated Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>