force-app/main/default/objects/Opportunity/fields/Billing_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Street__c</fullName>
    <label>Billing Contact Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>