force-app/main/default/objects/Opportunity/fields/Billing_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Title__c</fullName>
    <label>Billing Contact Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>