force-app/main/default/objects/Opportunity/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Business Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>