force-app/main/default/objects/Opportunity/fields/Business_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_City__c</fullName>
    <label>Business Contact City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>