force-app/main/default/objects/Opportunity/fields/Business_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_First_Name__c</fullName>
    <label>Business Contact First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>