force-app/main/default/objects/Opportunity/fields/Business_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Zip__c</fullName>
    <label>Business Contact Zip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>