force-app/main/default/objects/Opportunity/fields/Capability_and_Resources__c.field-meta.xml
<CustomField>
    <fullName>Capability_and_Resources__c</fullName>
    <label>Capability and Resources</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>