force-app/main/default/objects/Opportunity/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <label>Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>