force-app/main/default/objects/Opportunity/fields/Country_of_Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Parent_Organization__c</fullName>
    <label>Country of Parent Organization</label>
    <length>200</length>
    <type>Text</type>
</CustomField>