force-app/main/default/objects/Opportunity/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Source</label>
    <referenceTo>Funding_Source__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>