force-app/main/default/objects/Opportunity/fields/Goods_Services__c.field-meta.xml
<CustomField>
    <fullName>Goods_Services__c</fullName>
    <inlineHelpText>From application form</inlineHelpText>
    <label>Goods &amp; Services</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>