force-app/main/default/objects/Opportunity/fields/Hub_Spoke__c.field-meta.xml
<CustomField>
    <fullName>Hub_Spoke__c</fullName>
    <description>Opportunity hub or spoke</description>
    <label>Hub/Spoke</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>Spoke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>