force-app/main/default/objects/Opportunity/fields/Last_Activity_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_DateTime__c</fullName>
    <label>Last Activity Date and Time</label>
    <type>DateTime</type>
</CustomField>