force-app/main/default/objects/Opportunity/fields/Last_Activity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Notes__c</fullName>
    <label>Last Activity Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>