force-app/main/default/objects/Opportunity/fields/Last_Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Subject__c</fullName>
    <label>Last Activity Subject or Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>