force-app/main/default/objects/Opportunity/fields/Last_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Type__c</fullName>
    <label>Last Activity Types</label>
    <length>80</length>
    <type>Text</type>
</CustomField>