force-app/main/default/objects/Opportunity/fields/Likely_to_win__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_win__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked off then there is a strong chance this opportunity will result in a new member.</description>
    <label>Likely to win</label>
    <type>Checkbox</type>
</CustomField>