force-app/main/default/objects/Opportunity/fields/Membership_Category__c.field-meta.xml
<CustomField>
    <fullName>Membership_Category__c</fullName>
    <label>Membership Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Industry with more than 500 employees</fullName>
            </value>
            <value>
                <fullName>Medium Industry with 51 to 500 employees</fullName>
            </value>
            <value>
                <fullName>Small or Medium Industry with 11 to 50 employees</fullName>
            </value>
            <value>
                <fullName>Small Industry with 1 to 10 employees</fullName>
            </value>
            <value>
                <fullName>Academic Partner</fullName>
            </value>
            <value>
                <fullName>Community College Workforce Partner</fullName>
            </value>
            <value>
                <fullName>Solo Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>