force-app/main/default/objects/Opportunity/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <label>Parent Organization</label>
    <length>250</length>
    <type>Text</type>
</CustomField>