force-app/main/default/objects/Opportunity/fields/Primary_Contact_is_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_is_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact is Billing Contact</label>
    <type>Checkbox</type>
</CustomField>