force-app/main/default/objects/Opportunity/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Technical Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>