force-app/main/default/objects/Opportunity/fields/Technical_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Email__c</fullName>
    <label>Technical Contact Email</label>
    <type>Email</type>
</CustomField>