force-app/main/default/objects/Opportunity/fields/Technical_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_First_Name__c</fullName>
    <label>Technical Contact First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>