force-app/main/default/objects/Opportunity/fields/Technical_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_State__c</fullName>
    <label>Technical Contact State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>