force-app/main/default/objects/Opportunity/fields/Technical_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Title__c</fullName>
    <label>Technical Contact Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>