force-app/main/default/objects/Opportunity/fields/Technical_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Zip__c</fullName>
    <label>Technical Contact Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>