force-app/main/default/objects/Opportunity/recordTypes/IACMI_Membership.recordType-meta.xml
<RecordType>
    <fullName>IACMI_Membership</fullName>
    <active>true</active>
    <businessProcess>IACMI Membership</businessProcess>
    <label>IACMI Membership</label>
</RecordType>