force-app/main/default/objects/Opportunity/recordTypes/WFD_Project.recordType-meta.xml
<RecordType>
    <fullName>WFD_Project</fullName>
    <active>true</active>
    <businessProcess>WFD Projects</businessProcess>
    <label>WFD Project</label>
</RecordType>